# erctag

./: README.md  pyproject.toml
notebooks/: Tag IDs.ipynb
src/erctag/: __init__.py  alvar_tags.py  calculation.py  detection.py  main.py
tests/: test_detection.py
